--- a/.storybook/docs/guides/provider/Provider.stories.mdx
+++ b/.storybook/docs/guides/provider/Provider.stories.mdx
@@ -1,5 +1,78 @@
-import { Meta } from "@storybook/addon-docs";
+import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
+import { HvProvider, HvCheckBox } from "@hitachivantara/uikit-react-core";
 
-<Meta title="Guides/Provider" />
+<Meta title="Guides/Provider" component={HvProvider} />
 
 # Provider
+
+The `HvProvider` component is responsible for the theming capabilities, making cross-component theme properties available down the React tree through React context.
+
+Thus, this component should preferably be used at **the root of your component tree** in order for the theme to be passed down to all components and for the theme
+context to be accessible at any point of your application's tree. This component should also be unique in an application in most cases.
+
+You can setup the provider like so:
+
+```tsx
+import { HvProvider } from "@hitachivantara/uikit-react-core";
+
+const MyApp = ({ children }) => {
+  return <HvProvider>{children}</HvProvider>;
+};
+```
+
+<ArgsTable of={HvProvider} />
+
+The `HvProvider` enables you to override the default theme and provide your own customizations through the `theme` property. For more information,
+please read the [theming](/docs/guides-theming-default-themes--main-ds-5) documentation.
+
+If several `HvProvider`'s are used, you'll need to create different root elements and set the `rootElementId` property for each one of the providers.
+Otherwise, the styling will not work properly. Please, find an example below.
+
+<Canvas>
+  <Story name="Main">
+    <div
+      style={{
+        display: "flex",
+        flexDirection: "row",
+        justifyContent: "start",
+        alignItems: "center",
+        gap: "20px",
+      }}
+    >
+      <div id="hv-root-ds5-dawn-docs-provider">
+        <HvProvider
+          rootElementId="hv-root-ds5-dawn-docs-provider"
+          theme={{ baseTheme: "ds5", baseColorMode: "dawn" }}
+        >
+          <HvCheckBox label="DS5 Dawn" />
+        </HvProvider>
+      </div>
+      <div id="hv-root-ds5-wicked-docs-provider">
+        <HvProvider
+          rootElementId="hv-root-ds5-wicked-docs-provider"
+          theme={{ baseTheme: "ds5", baseColorMode: "wicked" }}
+        >
+          <HvCheckBox label="DS5 Wicked" />
+        </HvProvider>
+      </div>
+      <div id="hv-root-ds3-dawn-docs-provider">
+        <HvProvider
+          rootElementId="hv-root-ds3-dawn-docs-provider"
+          theme={{ baseTheme: "ds3", baseColorMode: "dawn" }}
+        >
+          <HvCheckBox label="DS3 Dawn" />
+        </HvProvider>
+      </div>
+      <div id="hv-root-ds3-wicked-docs-provider">
+        <HvProvider
+          rootElementId="hv-root-ds3-wicked-docs-provider"
+          theme={{ baseTheme: "ds3", baseColorMode: "wicked" }}
+        >
+          <HvCheckBox label="DS3 Wicked" />
+        </HvProvider>
+      </div>
+    </div>
+  </Story>
+</Canvas>
+
+**UI Kit components will not work properly if the `HvProvider` is not configured correctly** since they will not be able to access the properties of the active theme.
