chore: sb templates stories

--- a/docs/templates/Templates.stories.mdx
+++ b/docs/templates/Templates.stories.mdx
@@ -3,10 +3,10 @@ import LinkTo from "@storybook/addon-links/react";
 
 import TemplateItem from "./TemplateItem";
 
-import asset_inventory from "../assets/asset_inventory.png";
-import details_view from "../assets/details_view.png";
-import form from "../assets/form.png";
-import list_view from "../assets/list_view.png";
+import asset_inventory from "./assets/asset-inventory.png";
+import details_view from "./assets/details-view.png";
+import form from "./assets/form.png";
+import list_view from "./assets/list-view.png";
 
 <Meta title="Templates/Overview" />
 
@@ -24,21 +24,21 @@ The UI Kit templates correspond to Design System patterns that consist on the co
     }}
   >
     <TemplateItem
-      kind="Templates/Asset Inventory"
+      kind="Templates/AssetInventory"
       story="Main"
       image={asset_inventory}
       title="Asset Inventory"
       code="https://github.com/lumada-design/hv-uikit-react/tree/master/templates/AssetInventory"
     />
     <TemplateItem
-      kind="Templates/Details View"
+      kind="Templates/DetailsView"
       story="Main"
       image={details_view}
       title="Details View"
       code="https://github.com/lumada-design/hv-uikit-react/tree/master/templates/DetailsView"
     />
     <TemplateItem
-      kind="Templates/List View"
+      kind="Templates/ListView"
       story="Main"
       image={list_view}
       title="List View"
