chore: recover sb colors and icons stories and sb theming

--- a/docs/overview/Introduction.stories.mdx
+++ b/docs/overview/Introduction.stories.mdx
@@ -10,7 +10,7 @@ import { Meta } from "@storybook/addon-docs";
   }}
 />
 
-# What is NEXT UI Kit?
+# Introduction
 
 NEXT UI Kit is **Hitachi Vantara** open source React component library for products and digital solutions.
 
